
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct in_addr {int dummy; } ;
struct sockaddr_in {struct in_addr sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;
typedef int serv_addr ;


 int AF_INET ;
 int IPPROTO_TCP ;
 int PF_INET ;
 int SOCK_STREAM ;
 int close (int) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int fprintf (int ,char*,char const*) ;
 struct hostent* gethostbyname (char const*) ;
 int htons (int const) ;
 int perror (char*) ;
 int socket (int ,int ,int ) ;
 int stderr ;

int fgfsconnect(const char *hostname, const int port)
{
 struct sockaddr_in serv_addr;
 struct hostent *hostinfo;
 int sock;

 sock = socket(PF_INET, SOCK_STREAM, IPPROTO_TCP);
 if (sock < 0) {
  perror("fgfsconnect/socket");
  return -1;
 }

 hostinfo = gethostbyname(hostname);
 if (hostinfo == ((void*)0)) {
  fprintf(stderr, "fgfsconnect: unknown host: \"%s\"\n", hostname);
  close(sock);
  return -2;
 }

 serv_addr.sin_family = AF_INET;
 serv_addr.sin_port = htons(port);
 serv_addr.sin_addr = *(struct in_addr *)hostinfo->h_addr;

 if (connect(sock, (struct sockaddr *)&serv_addr, sizeof(serv_addr)) < 0) {
  perror("fgfsconnect/connect");
  close(sock);
  return -3;
 }
 return sock;
}
